# ai-day-trading-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_day_trading_demo.py  run_demo.py  test_simple.py
src/: day_trading_main.py  main.py  scheduler.py
src/agents/: base_agent.py  data_collector.py  day_trading_analyst.py  day_trading_coordinator.py  master_coordinator.py  technical_analyst.py
src/dashboard/: app.py
src/models/: stock_data.py
src/utils/: day_trading_screener.py  real_time_alerts.py  stock_universe.py
